
2009-01-26 Denton Woods <doomwiz@users.sf.net>
	* projects/win mobile: Added Windows Mobile projects.
	* Removed .cvsignore files from SVN.
	* il_bits.c:65: Commented out icloser call.
	* include/IL/DevIL.i: Removed IL/ prefix on header filenames.
	* include/IL/build-python and build-lua: Updated paths.
	* projects folder: Renamed msvc to msvc9.
	* il_tpl.c: Added for TPL support.
	* il_io.c: Added function calls for TPL support.
	* il_internal.h: Added declarations for TPL support.

2009-01-27 Denton Woods <doomwiz@users.sf.net>
	* il_bits.c (bseek): Changed check for return values of iseek.
	* il_tpl.c: Added support for many more TPL data formats.
	* il_tpl.c: Added support for color indexed data formats.
	* il_tpl.c: Added support for multiple images in a file.
	* il_sdl.c (ilutConvertToSDLSurface): Overhauled this code.
	* ilut_opengl.c: Removed iGLSetMaxW/H/D and MaxTexW/H/D.
	* ilut_states.h/ilut_states.c: Added MaxTexW/H/D to ILUT_STATES.
	* ilut_states.c (ilutGetIntegerv): Added ILUT_MAXTEX_WIDTH/HEIGHT/DEPTH.

2009-01-28 Denton Woods <doomwiz@users.sf.net>
	* il_tpl.c: Added line 219.

2009-01-30 Denton Woods <doomwiz@users.sf.net>
	* Added DevIL.NET to projects folder.
	* il_dds.c: Changed Image->Next code for cubemaps to read Image->Faces.  Also changed Image->Next
	  code for mipmaps to read Image->Mipmaps, even further down the chain.
	* il_dds.c (ilTexImageDxtc): Added call to ilCloseImage for Image->Faces.
	* il_endian.h:113: Fixed bug #2545848 - inline GCC ASM changed.
	* ilut_directx9.c (ilutD3D9CubeTexture): Changed ->Next to ->Faces.
	* ilut_directx9.c (iD3D9CreateMipmaps): Changed ->Next to ->Mipmaps.
	* il_states.c:605: Changed from ->Next to ->Mipmaps.
	* il_states.c (iGetActiveNum): Rewrote to not use ->Next pointer for everything.
	* il_vtf.c (VtfInitMipmaps): Changed to reflect the new mipmap arrangement as well.
	* il_wal.c:141,142: Changed ->Next to ->Mipmaps.
	* il_wal.c: Cleaned up the formatting a bit.
	